@@ -1,28 +1,37 @@
 package com.twistercambodia.karasbackend.inventory.dto;
 
 import com.twistercambodia.karasbackend.inventory.entity.Category;
-import com.twistercambodia.karasbackend.inventory.entity.Product;
 import org.modelmapper.ModelMapper;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CategoryDto {
     private String id;
     private String name;
-    private List<ProductDto> products;
-    private int productCount;
+    private List<SubcategoryRequestDto> subcategories;
+    private int subcategoryCount;
+    private String img;
+    private String color;
 
     public CategoryDto() {}
 
     public CategoryDto(Category category) {
-        ModelMapper modelMapper = new ModelMapper();
-        this.id = category.getId();
+        ModelMapper mapper = new ModelMapper();
+        this.id = category.getId();;
         this.name = category.getName();
-        this.products = category.getProducts().stream()
-                .map((p) -> modelMapper.map(p, ProductDto.class))
-                .collect(Collectors.toList());
-        this.productCount = category.getProductCount();
+        this.subcategories =
+                category.getSubcategories() != null
+                ?
+                category
+                    .getSubcategories()
+                    .stream()
+                    .map(sc -> mapper.map(sc, SubcategoryRequestDto.class))
+                    .toList()
+                :
+                new ArrayList<>();
+        this.subcategoryCount = category.getSubcategoryCount();
+        this.img = category.getImg();
     }
 
     public String getId() {
@@ -41,19 +50,35 @@ public class CategoryDto {
         this.name = name;
     }
 
-    public List<ProductDto> getProducts() {
-        return products;
+    public List<SubcategoryRequestDto> getSubcategories() {
+        return subcategories;
     }
 
-    public void setProducts(List<ProductDto> products) {
-        this.products = products;
+    public void setSubcategories(List<SubcategoryRequestDto> subcategories) {
+        this.subcategories = subcategories;
     }
 
-    public int getProductCount() {
-        return productCount;
+    public int getSubcategoryCount() {
+        return subcategoryCount;
     }
 
-    public void setProductCount(int productCount) {
-        this.productCount = productCount;
+    public void setSubcategoryCount(int subcategoryCount) {
+        this.subcategoryCount = subcategoryCount;
+    }
+
+    public String getImg() {
+        return img;
+    }
+
+    public void setImg(String img) {
+        this.img = img;
+    }
+
+    public String getColor() {
+        return color;
+    }
+
+    public void setColor(String color) {
+        this.color = color;
     }
 }
